fix z-index issue on mobile menu blocking search bar on mobile

--- a/client/main.css
+++ b/client/main.css
@@ -45,7 +45,7 @@ i {
   opacity: 0;
   position: absolute;
   white-space: nowrap;
-  z-index: 1000;
+  z-index: 0;
   will-change: width, height;
 }
 
